# helm-charts

./: .gitignore  CHANGELOG.md  README.md  index.yaml  script.sh
.github/workflows/: check_changelog.yaml  extract_alembic_history_test.yaml  helm_lint_test.yaml  helm_release_charts.yaml
charts/llamacloud/: .helmignore  CHANGELOG.md  Chart.yaml  README.md  values.schema.json  values.yaml
charts/llamacloud/ci/: parallel_prepull.py  test-helm-install.sh  test-small-values.yaml
charts/llamacloud/deployment_tests/: .env.template  conftest.py  pyproject.toml  settings.py
charts/llamacloud/deployment_tests/index/: test_file.py  test_index.py
charts/llamacloud/docker/: .env.llamacloud.template  .env.llamaparse.template  .env.secrets.template  README.md  docker-compose.yaml  run.sh  setup-filestore.sh  setup-keycloak.sh  setup.sh
charts/llamacloud/docs/: llamaextract.md  s3-proxy-setup.md
charts/llamacloud/examples/: basic-autoscaling-config.yaml  basic-azure-openai.yaml  basic-config.yaml  basic-ingress-config.yaml  basic.yaml  custom-filestore-buckets-config.yaml  external-deps-config.yaml  full-azure-config.yaml  full-azure-setup.yaml  full-llm-config.yaml  medium-size-config.yaml  private-registry-config.yaml  s3proxy-config.yaml  s3proxy.yaml
charts/llamacloud/kubernetes/: README.md
charts/llamacloud/scripts/: extract_alembic_history.sh  temp.env
runbooks/: downgrade.md
scripts/: helm_chart_alembic_version.sh
tests/: .env.template  README.md  conftest.py  pyproject.toml  settings.py
tests/index/: test_file.py  test_index.py
(+271 files in other folders)
